--- a/package.json
+++ b/package.json
@@ -22,22 +22,20 @@
   },
   "homepage": "https://github.com/ziltag/frontend-ziltag.com#readme",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-loader": "^6.0.0",
-    "cssnano": "^3.3.2",
-    "json-loader": "^0.5.3",
     "koa-convert": "^1.0.0",
     "koa-webpack-dev-middleware": "^1.0.1",
     "koa-webpack-hot-middleware": "^1.0.1",
     "nodemon": "^1.8.1",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2"
+    "react-hot-loader": "^1.3.0"
   },
   "dependencies": {
+    "babel-core": "^6.0.20",
+    "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.0.16",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "cssnano": "^3.3.2",
     "isomorphic-fetch": "^2.2.0",
     "koa": "^2.0.0-alpha.2",
     "koa-static-cache": "^3.1.2",
@@ -46,6 +44,7 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "redux": "^3.0.4",
-    "serialize-javascript": "^1.1.2"
+    "serialize-javascript": "^1.1.2",
+    "webpack": "^1.12.2"
   }
 }
