--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,6 @@
     "eol-last": [0],
     "no-mixed-requires": [0],
     "no-underscore-dangle": [0],
-    "semi": [2, "always"]
+    "semi": [2, "never"]
   }
 }
