--- a/package.json
+++ b/package.json
@@ -34,15 +34,23 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "cssnano": "^3.3.2",
+    "history": "^1.13.1",
+    "http-proxy": "^1.12.0",
     "isomorphic-fetch": "^2.2.0",
     "koa": "^2.0.0-alpha.2",
     "koa-convert": "^1.0.0",
     "koa-static-cache": "^3.1.2",
+    "postcss": "^5.0.12",
     "qs": "^5.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
     "redux": "^3.0.4",
+    "redux-actions": "^0.8.0",
+    "redux-effects": "^0.4.0",
+    "redux-effects-fetch": "^0.4.1",
+    "redux-router": "^1.0.0-beta4",
     "serialize-javascript": "^1.1.2",
     "webpack": "^1.12.2"
   }
