--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:server && npm run build:client",
     "build:server": "babel src --out-dir dist --ignore=client.js",
     "build:client": "webpack --config webpack/prod.config.babel.js",
-    "serve": "NODE_ENV=dev NODE_PORT=2000 nodemon src/server.js --ignore src/client.js --exec babel-node",
+    "serve": "nodemon src/server.js --ignore src/client.js --exec babel-node",
     "start": "pm2 start dist/server.js -i 0 --name frontend",
     "stop": "pm2 delete frontend",
     "restart": "pm2 restart frontend"
