--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
+    "cssnext-loader": "^1.0.1",
     "history": "^1.13.1",
     "http-proxy": "^1.12.0",
     "isomorphic-fetch": "^2.2.0",
@@ -41,6 +43,8 @@
     "koa-convert": "^1.0.0",
     "koa-static-cache": "^3.1.2",
     "postcss": "^5.0.12",
+    "postcss-loader": "^0.8.0",
+    "postcss-nesting": "^2.0.6",
     "qs": "^5.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
@@ -52,6 +56,7 @@
     "redux-effects-fetch": "^0.4.1",
     "redux-router": "^1.0.0-beta4",
     "serialize-javascript": "^1.1.2",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.2"
   }
 }
