--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "cssnext-loader": "^1.0.1",
+    "file-loader": "^0.8.5",
     "history": "^1.13.1",
     "http-proxy": "^1.12.0",
     "isomorphic-fetch": "^2.2.0",
@@ -57,6 +58,7 @@
     "redux-router": "^1.0.0-beta4",
     "serialize-javascript": "^1.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.2"
   }
 }
