--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "classnames": "^2.2.1",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
     "cssnext-loader": "^1.0.1",
