--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "homepage": "https://github.com/ziltag/frontend-ziltag.com#readme",
   "devDependencies": {
+    "babel-plugin-react-transform": "^2.0.0-beta1",
     "koa-webpack-dev-middleware": "^1.0.1",
     "koa-webpack-hot-middleware": "^1.0.1",
-    "react-hot-loader": "^1.3.0"
+    "react-transform-hmr": "^1.0.1"
   },
   "dependencies": {
     "babel-core": "^6.0.20",
