--- a/env.js.example
+++ b/env.js.example
@@ -1,4 +1,4 @@
 exports.NODE_ENV = 'dev'
 exports.NODE_PORT = 2000
 exports.RAILS_ADDR = 'http://localhost:3000'
-exports.PLUGIN_ADDR = 'http://localhost:4000/dist/ziltag-plugin.js'
+exports.PLUGIN_ADDR = 'http://localhost:4000/dist/staging/ziltag-plugin.js'
