update env example

--- a/env.js.example
+++ b/env.js.example
@@ -1,4 +1,7 @@
 exports.NODE_ENV = 'dev'
 exports.NODE_PORT = 2000
-exports.RAILS_ADDR = 'http://localhost:3000'
+exports.SSL_PORT = 2001
+exports.SSL_KEY = '/path/to/ssl/server.key'
+exports.SSL_CERT = '/path/to/ssl/server.crt'
+exports.RAILS_ADDR = 'https://localhost:3000'
 exports.PLUGIN_ADDR = 'http://localhost:4000/dist/staging/ziltag-plugin.js'
