--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "isomorphic-fetch": "^2.2.0",
     "koa": "^2.0.0-alpha.2",
     "koa-convert": "^1.0.0",
+    "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
     "postcss": "^5.0.12",
     "postcss-loader": "^0.8.0",
