style: update env.js.example

--- a/env.js.example
+++ b/env.js.example
@@ -1,7 +1,11 @@
+import path from 'path'
+
+
 exports.NODE_ENV = 'dev'
 exports.NODE_PORT = 2000
 exports.SSL_PORT = 2001
-exports.SSL_KEY = '/path/to/ssl/server.key'
-exports.SSL_CERT = '/path/to/ssl/server.crt'
+exports.SSL_KEY = path.resolve(__dirname, 'ssl/localhost.key')
+exports.SSL_CERT = path.resolve(__dirname, 'ssl/localhost.crt')
 exports.API_ADDR = 'https://localhost:3000'
-exports.PLUGIN_ADDR = 'http://localhost:4000/dist/staging/ziltag-plugin.js'
+exports.SSE_ADDR = 'https://localhost:3310'
+exports.PLUGIN_ADDR = 'http://localhost:4000/dist/ziltag-plugin.js'
