--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "koa-convert": "^1.0.0",
     "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
+    "outdent": "^0.1.2",
     "postcss": "^5.0.12",
     "postcss-loader": "^0.8.0",
     "postcss-nesting": "^2.0.6",
