--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
+    "react-social": "^1.0.4",
     "react-textarea-autosize": "^3.3.0",
     "react-timeago": "^2.2.1",
     "redux": "^3.0.4",
