--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "classnames": "^2.2.1",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
-    "cssnext-loader": "^1.0.1",
     "file-loader": "^0.8.5",
     "history": "^1.13.1",
     "http-proxy": "^1.12.0",
@@ -49,6 +48,7 @@
     "koa-static-cache": "^3.1.2",
     "outdent": "^0.1.2",
     "postcss": "^5.0.12",
+    "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
     "postcss-nesting": "^2.0.6",
     "qs": "^5.2.0",
