--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
   },
   "homepage": "https://github.com/ziltag/frontend-ziltag.com#readme",
   "devDependencies": {
-    "babel-plugin-react-transform": "^2.0.0-beta1",
     "cz-conventional-changelog": "^1.1.5",
     "koa-webpack-dev-middleware": "^1.0.1",
-    "koa-webpack-hot-middleware": "^1.0.1",
-    "react-transform-hmr": "^1.0.1"
+    "koa-webpack-hot-middleware": "^1.0.1"
   },
   "dependencies": {
     "babel-core": "^6.0.20",
