--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "devDependencies": {
     "cz-conventional-changelog": "^1.1.5",
     "koa-webpack-dev-middleware": "^1.0.1",
-    "koa-webpack-hot-middleware": "^1.0.1"
+    "koa-webpack-hot-middleware": "^1.0.1",
+    "redux-devtools": "^3.2.0",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.10"
   },
   "dependencies": {
     "babel-core": "^6.0.20",
