--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "http-proxy": "^1.12.0",
     "isomorphic-fetch": "^2.2.0",
     "koa": "^2.0.0-alpha.2",
+    "koa-compress": "git://github.com/koajs/compress.git#v2.x",
     "koa-convert": "^1.0.0",
     "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
