--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "koa-convert": "^1.0.0",
     "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
+    "mobile-detect": "^1.3.2",
     "outdent": "^0.1.2",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
