--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^2.0.0",
     "react-social": "^1.0.4",
     "react-textarea-autosize": "^3.3.0",
     "react-timeago": "^2.2.1",
@@ -67,7 +67,7 @@
     "redux-actions": "^0.8.0",
     "redux-effects": "^0.4.0",
     "redux-effects-fetch": "^0.4.1",
-    "redux-router": "^1.0.0-beta4",
+    "redux-router": "^2.0.0",
     "redux-saga": "^0.10.4",
     "serialize-javascript": "^1.1.2",
     "style-loader": "^0.13.0",
