--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
     "mobile-detect": "^1.3.2",
+    "normalize.css": "^4.2.0",
     "outdent": "^0.1.2",
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.9.1",
-    "postcss-normalize": "^0.3.0",
     "qs": "^5.2.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
