--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "redux-devtools-log-monitor": "^1.0.10"
   },
   "dependencies": {
-    "babel-core": "^6.0.20",
-    "babel-loader": "^6.0.0",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-modern-node": "^3.1.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.1",
     "css-loader": "^0.23.0",
     "cssnano": "^3.3.2",
@@ -78,5 +79,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "babel": {
+    "presets": [["modern-node", {"loose": true}], "stage-0", "react"]
   }
 }
