--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.9.1",
     "qs": "^5.2.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.2",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
     "react-social": "^1.0.4",
     "react-textarea-autosize": "^3.3.0",
-    "react-timeago": "^2.2.1",
+    "react-timeago": "^3.1.2",
     "redux": "^3.0.4",
     "redux-actions": "^0.8.0",
     "redux-effects": "^0.4.0",
@@ -81,6 +81,15 @@
     }
   },
   "babel": {
-    "presets": [["modern-node", {"loose": true}], "stage-0", "react"]
+    "presets": [
+      [
+        "modern-node",
+        {
+          "loose": true
+        }
+      ],
+      "stage-0",
+      "react"
+    ]
   }
 }
