--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,60 +9,28 @@ services:
       - "${PORT}:2000"
       - "${SSL_PORT}:2001"
       - "${DEBUG_PORT}:1999"
-    links:
-      - ziltag-plugin
-      - web
-      - sse
     volumes:
       - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - node_modules:/usr/src/app/node_modules
+    depends_on:
+      - app
 
   ziltag-plugin:
     image: localhost:5000/ziltag-plugin
     command: npm run serve
 
   db:
-    image: postgres
+    image: postgres:9.4
     volumes:
       - ziltag-db:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: ziltag_development
 
   app:
-    image: localhost:5000/ziltag.com
+    image: ziltag/ziltag.com
     depends_on:
       - db
 
-  web:
-    image: localhost:5000/ziltag.com
-    command: bundle exec puma
-    expose:
-      - 3000
-    depends_on:
-      - app
-
-  sse:
-    image: localhost:5000/ziltag.com
-    command: ruby lib/sse.rb -svp 3310 --ssl --ssl-key ../config/ssl/localhost.key --ssl-cert ../config/ssl/localhost.crt -c ./sse/config.rb
-    expose:
-      - 3310
-    depends_on:
-      - app
-
-  worker:
-    image: localhost:5000/ziltag.com
-    command: bundle exec rake qc:work
-    environment:
-      QUEUES: "mailers,default"
-      QC_MEASURE: "true"
-    depends_on:
-      - app
-
-  webpack:
-    image: localhost:5000/ziltag.com
-    command: npm run dev
-    depends_on:
-      - app
-
 volumes:
   ziltag-db:
+  node_modules:
