--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-modern-node": "^3.1.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "classnames": "^2.2.1",
@@ -89,7 +89,7 @@
   "babel": {
     "presets": [
       [
-        "modern-node",
+        "es2015",
         {
           "loose": true
         }
