--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "start": "pm2 start dist/server.js -i 0 --name frontend",
     "stop": "pm2 delete frontend",
     "restart": "pm2 restart frontend",
-    "docker:build": "CONTAINER_NAME=frontend-ziltag.com_build PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose build",
-    "docker:push": "docker tag frontend-ziltag.com_build localhost:5000/frontend-ziltag.com && docker push localhost:5000/frontend-ziltag.com",
-    "docker:initdb": "CONTAINER_NAME=frontend-ziltag.com_initdb PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose run --rm app bin/rake dev:setup",
-    "docker:migrate": "CONTAINER_NAME=frontend-ziltag.com_migrate PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose run --rm app bin/rake db:migrate",
+    "docker:pull": "docker-compose -f docker-compose.image.yml pull",
+    "docker:build": "docker-compose -f docker-compose.image.yml build",
+    "docker:upgrade": "npm run docker:pull && npm run docker:build && npm run docker:migrate",
+    "docker:initdb": "CONTAINER_NAME=frontend-ziltag.com_initdb PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose run --rm ziltag.dev bin/rake dev:setup",
+    "docker:migrate": "CONTAINER_NAME=frontend-ziltag.com_migrate PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose run --rm ziltag.dev bin/rake db:migrate",
     "docker:serve": "CONTAINER_NAME=frontend-ziltag.com_serve PORT=${PORT:=2000} SSL_PORT=$((${PORT:=2000}+1)) DEBUG_PORT=$((${PORT:=2000}-1)) docker-compose up",
     "docker:npm": "docker exec frontend-ziltag.com_serve npm"
   },
