--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   },
   "homepage": "https://github.com/ziltag/frontend-ziltag.com#readme",
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
     "cz-conventional-changelog": "^1.1.6",
+    "eslint": "^3.4.0",
     "koa-webpack-dev-middleware": "^1.0.1",
     "koa-webpack-hot-middleware": "^1.0.1",
     "nodemon": "^1.10.2",
