--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "serialize-javascript": "^1.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "webpack": "^2.1.0-beta.22"
   },
   "config": {
     "commitizen": {
