--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "mobile-detect": "^1.3.2",
     "normalize.css": "^4.2.0",
     "outdent": "^0.1.2",
+    "postcss-calc": "^5.3.1",
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.9.1",
     "qs": "^5.2.0",
