--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "koa-force-ssl": "0.0.5",
     "koa-static-cache": "^3.1.2",
     "mobile-detect": "^1.3.2",
+    "node-fetch": "^1.6.3",
     "normalize.css": "^4.2.0",
     "outdent": "^0.1.2",
     "postcss-calc": "^5.3.1",
