--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "postcss-cssnext": "^2.5.2",
     "postcss-loader": "^0.9.1",
     "qs": "^5.2.0",
+    "raven-js": "^3.9.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "^4.0.0",
